# ComputerGraphics

./: Floor.h  camera.h  food.tga  hair1.tga  hair2.tga  hand.tga  helloglsl.exe.resource.txt  imageplane.h  main.cpp  money.tga  sphere.h
Assignment3/: CMakeLists.txt  CMakeLists.txt.user.aD6268  CMakeLists.txt.user.ff926d9
Assignment3/lecture_viewing3d_fov_eigen_grid/: lecture_viewing3d_fov_eigen_grid  lecture_viewing3d_fov_eigen_grid.exe.resource.txt  main.cpp  perlin_noise.h
Assignment3/lecture_viewing3d_fov_eigen_grid/_mesh/: Mesh.h  Mesh_fshader.glsl  Mesh_vshader.glsl
Assignment3/lecture_viewing3d_fov_eigen_grid/_skybox/: back.tga  bottom.tga  front.tga  left.tga  right.tga  skybox.h  skybox_fshader.glsl  skybox_vshader.glsl  top.tga
Assignment3/lecture_viewing3d_fov_eigen_grid/_water/: water.h  water_fshader.glsl  water_vshader.glsl
Assignment3/mirror/: main.cpp  mirror  mirror.exe.resource.txt  mirror.ilk
Assignment3/mirror/_floor/: Floor_fshader.glsl
Assignment3/pointpick/: main.cpp
Assignment3/trimeshio/: CMakeLists.txt
Quad_normal/: Quad_normal.h
helloglsl/: ScreenQuad_fshader.glsl  body.tga  hairBound.h  hairBound.tga  hand2.tga  helloglsl  miku_head.tga  mikuhead.tga  saturn.tga
helloglsl/Quad_normal/: fshader.glsl  vshader.glsl
helloglsl/Triangle/: fshader.glsl  vshader.glsl
helloglsl/_background/: _background.h
helloglsl/_screenquad/: ScreenQuad_fshader.glsl
pointpick/: main.cpp  pointpick  pointpick.exe.resource.txt  pointpick.ilk  vertices.txt
pointpick/_multiline/: multiline.h
raytrace/: main.cpp
(+2 files in other folders)
